--- a/sample/src/main/res/values/strings.xml
+++ b/sample/src/main/res/values/strings.xml
@@ -24,5 +24,5 @@
   -->
 
 <resources>
-    <string name="app_name">Sample</string>
+    <string name="app_name">MSAL Sample App</string>
 </resources>
