update test app

--- a/sample/src/main/res/values/strings.xml
+++ b/sample/src/main/res/values/strings.xml
@@ -25,4 +25,20 @@
 
 <resources>
     <string name="app_name">MSAL Sample App</string>
+    <string name="select_account">Select Account </string>
+    <string name="force_login">Force Login</string>
+    <string name="consent">Consent</string>
+
+    <string name="authority_text">Authority</string>
+    <string name="login_hint_text">Login hint</string>
+    <string name="ui_behavior_text">Ui Behavior</string>
+    <string name="data_profile_text">Data Profile</string>
+    <string name="scope_text">Scope</string>
+    <string name="scope_text_hint">Type in scopes delimited by space</string>
+    <string name="enable_pii_text">Enable PII logging</string>
+    <string name="force_refresh">Force Refresh</string>
+    <string name="expire_at_button">Expire Access Token</string>
+    <string name="clear_cache_button">Clear Cache</string>
+    <string name="acquire_token_button">AcquireToken</string>
+    <string name="acquire_token_silent_button">AcquireTokenSilent</string>
 </resources>
