move button text to string contants file

--- a/sample/src/main/res/values/strings.xml
+++ b/sample/src/main/res/values/strings.xml
@@ -38,8 +38,11 @@
     <string name="scope_text_hint">Type in scopes delimited by space</string>
     <string name="enable_pii_text">Enable PII logging</string>
     <string name="force_refresh">Force Refresh</string>
-    <string name="expire_at_button">Expire Access Token</string>
-    <string name="clear_cache_button">Clear Cache</string>
     <string name="acquire_token_button">AcquireToken</string>
     <string name="acquire_token_silent_button">AcquireTokenSilent</string>
+    <string name="result_hint_text">Acquire token interactive/silent flow result data goes here...</string>
+    <string name="log_hint_text">Log data goes here...</string>
+    <string name="clear_log_button">clear logs</string>
+    <string name="btn_getUser">Get User</string>
+    <string name="btn_removeUser">Remove User</string>
 </resources>
