--- a/sample/src/main/res/values/strings.xml
+++ b/sample/src/main/res/values/strings.xml
@@ -34,7 +34,7 @@
     <string name="ui_behavior_text">Ui Behavior</string>
     <string name="data_profile_text">Data Profile</string>
     <string name="scope_text">Scope</string>
-    <string name="additional_scope_text">Additional Scopes</string>
+    <string name="extra_scope_text">Extra Scopes</string>
     <string name="scope_text_hint">Type in scopes delimited by space</string>
     <string name="enable_pii_text">Enable PII logging</string>
     <string name="force_refresh">Force Refresh</string>
