Adding release notes

--- a/changelog
+++ b/changelog
@@ -2,7 +2,30 @@ MSAL Wiki : https://github.com/AzureAD/microsoft-authentication-library-for-andr
 
 Version 0.2.0
 ----------------------------
-- TODO
+- Cache schema has been redesigned to support migration from ADAL 1.15.2+
+- PublicClientApplication now accepts a JSON metadata document to configure
+    * client_id
+    * redirect_uri
+    * authorities
+    * authorization_user_agent
+    * http settings
+        - configurable timeouts for read/connection
+    * logging
+        - PII/OII switch
+        - log level
+- API changes
+    * User has been replaced by IAccount
+        - getUsers() -> getAccounts()
+        - getUser(String) -> getAccounts(String)
+        - removeUser(User) -> removeAccount(IAccount)
+        - acquireToken/acquireTokenSilent overloads now accept IAccount parameter
+    * Telemetry has been temporarily removed, and will return in a future release
+    * PublicClientApplication#setComponent has been removed
+    * PublicClientApplication#setValidateAuthority has been removed
+        - Authorities are now supplied by PublicClientApplicationConfiguration, validated when acquiring tokens
+        - Extra query param overloads now accept List<Pair<String, String>> instead of String
+        - Illegal arguments to acquireToken or acquireTokenSilent now throw MsalArgumentException
+    * PublicClientApplication#setSliceParameters has been moved to PublicClientApplicationConfiguration
 
 Version 0.1.3
 ----------------------------
