--- a/testapps/testapp/src/main/res/values/strings.xml
+++ b/testapps/testapp/src/main/res/values/strings.xml
@@ -38,12 +38,15 @@
     <string name="scope_text_hint">Type in scopes delimited by space</string>
     <string name="enable_pii_text">Enable PII logging</string>
     <string name="force_refresh">Force Refresh</string>
+    <string name="default_browser">Default Browser</string>
+    <string name="auth_user_agent">User Agent</string>
     <string name="acquire_token_button">AcquireToken</string>
     <string name="acquire_token_silent_button">AcquireTokenSilent</string>
     <string name="result_hint_text">Acquire token interactive/silent flow result data goes here...</string>
     <string name="log_hint_text">Log data goes here...</string>
     <string name="clear_log_button">clear logs</string>
-    <string name="btn_getUser">Get User</string>
+    <string name="select_user"> Select User</string>
+    <string name="btn_getUser">Get Users</string>
     <string name="btn_removeUser">Remove User</string>
 
     <!-- TODO: Remove or change this placeholder text -->
