--- a/testapps/testapp/src/main/res/values/strings.xml
+++ b/testapps/testapp/src/main/res/values/strings.xml
@@ -34,6 +34,7 @@
     <string name="ui_behavior_text">Ui Behavior</string>
     <string name="data_profile_text">Data Profile</string>
     <string name="scope_text">Scope</string>
+    <string name="scope_default_text">user.read</string>
     <string name="extra_scope_text">Extra Scopes</string>
     <string name="scope_text_hint">Type in scopes delimited by space</string>
     <string name="enable_pii_text">Enable PII logging</string>
