--- a/changelog
+++ b/changelog
@@ -1,5 +1,11 @@
 MSAL Wiki : https://github.com/AzureAD/microsoft-authentication-library-for-android/wiki
 
+Version 0.2.1
+----------------------------
+- Picks up common@0.0.5-hf1 (Hotfix for MSAL/#420)
+    * AccessTokenRecord#isExpired no longer falls back on ext_expires_in
+    * ext_expires_in should only be inspected if HTTP 503 Service Unavailable is returned from AAD
+
 Version 0.2.0
 ----------------------------
 - Cache schema has been redesigned to support migration from ADAL 1.15.2+
