--- a/changelog
+++ b/changelog
@@ -1,5 +1,9 @@
 MSAL Wiki : https://github.com/AzureAD/microsoft-authentication-library-for-android/wiki
 
+Version 0.3.0
+----------------------------
+To Be Updated.
+
 Version 0.2.2
 ----------------------------
 - Picks up common@0.0.8
