Update display app name, package name

--- a/package-inspector/src/main/res/values/strings.xml
+++ b/package-inspector/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
 <resources>
-    <string name="app_name">ShaTestApp</string>
+    <string name="app_name">Package Inspector</string>
     <string name="dismiss">Dismiss</string>
 </resources>
