--- a/pop-benchmarker/src/main/res/values/strings.xml
+++ b/pop-benchmarker/src/main/res/values/strings.xml
@@ -1,3 +1,3 @@
 <resources>
-    <string name="app_name">Pop Benchmarker</string>
+    <string name="app_name">Pop Benchmarker (Nimbus + Jetpack)</string>
 </resources>
