--- a/testapps/testapp/src/main/res/values/strings.xml
+++ b/testapps/testapp/src/main/res/values/strings.xml
@@ -56,4 +56,7 @@
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="pop_resource_url_text">PoP Resource URL</string>
+    <string name="pop_http_method_text">PoP HTTP Method</string>
+    <string name="pop_default_resource_url">https://signedhttprequest.azurewebsites.net/api/validateSHR</string>
 </resources>
