--- a/changelog
+++ b/changelog
@@ -1,5 +1,10 @@
 MSAL Wiki : https://github.com/AzureAD/microsoft-authentication-library-for-android/wiki
 
+Version 1.4.0
+- Fix for MSAL #920, 924, 935, 940
+    * Crash due to error receiving CANCEL broadcast
+- (Preview) Support for AT PoP
+
 Version 1.3.0
 ------------
 - Picks up fixes in common@1.0.15
