Add claims to testApp. Add instance_aware_browser_skip_broker

--- a/testapps/testapp/src/main/res/values/strings.xml
+++ b/testapps/testapp/src/main/res/values/strings.xml
@@ -59,4 +59,5 @@
     <string name="pop_resource_url_text">PoP Resource URL</string>
     <string name="pop_http_method_text">PoP HTTP Method</string>
     <string name="pop_default_resource_url">https://signedhttprequest.azurewebsites.net/api/validateSHR</string>
+    <string name="claims">Claims</string>
 </resources>
