--- a/changelog
+++ b/changelog
@@ -1,7 +1,7 @@
 MSAL Wiki : https://github.com/AzureAD/microsoft-authentication-library-for-android/wiki
 
 Version 1.4.1
-- Hotfix release for Teams Dog Food.
+- Hotfix release for Teams.
 - Fixes #1005
 - Fixes common #871
 - Limit silent thread pool to 5 threads.
