--- a/changelog
+++ b/changelog
@@ -1,5 +1,10 @@
 MSAL Wiki : https://github.com/AzureAD/microsoft-authentication-library-for-android/wiki
 
+Version 1.5.4
+-----------
+- Fix for NPE if sub_error is null.
+- Picks up common@2.0.12
+
 Version 1.5.3
 -----------
 - Changes to delete RT on bad_token suberror.
