--- a/changelog
+++ b/changelog
@@ -1,5 +1,9 @@
 MSAL Wiki : https://github.com/AzureAD/microsoft-authentication-library-for-android/wiki
 
+Version 1.5.5
+-----------
+- Picks up fixes in common@2.0.14
+
 Version 1.5.4
 -----------
 - Fix for NPE if sub_error is null.
