--- a/changelog
+++ b/changelog
@@ -2,7 +2,7 @@ MSAL Wiki : https://github.com/AzureAD/microsoft-authentication-library-for-andr
 
 Version 1.5.5
 -----------
-- Picks up fixes in common@2.0.14
+- Picks up fixes in common@2.0.12-hf1
 
 Version 1.5.4
 -----------
