--- a/changelog
+++ b/changelog
@@ -2,6 +2,7 @@ MSAL Wiki : https://github.com/AzureAD/microsoft-authentication-library-for-andr
 
 Version v.Next
 ----------
+- Expose RT to Broker apps.
 - Moved broker controller and strategy classes to common for MSALCPP brokered auth.
 
 Version 1.6.0
