--- a/changelog
+++ b/changelog
@@ -3,6 +3,7 @@ MSAL Wiki : https://github.com/AzureAD/microsoft-authentication-library-for-andr
 Version v.Next
 ----------
 - Moved broker controller and strategy classes to common for MSALCPP brokered auth.
+- Removed 'defaultAuthority' param from TokenShareUtility; MSA RT ingestion always uses WW-/consumers.
 
 Version 1.6.0
 -----------
