--- a/changelog
+++ b/changelog
@@ -1,4 +1,8 @@
 MSAL Wiki : https://github.com/AzureAD/microsoft-authentication-library-for-android/wiki
+Version 2.0.1
+----------
+- Added a check for UNSET OpenIdConnectPromptParameter value.
+- Picks up common@3.0.2
 
 Version 2.0.0
 ----------
