--- a/changelog
+++ b/changelog
@@ -3,6 +3,7 @@ MSAL Wiki : https://github.com/AzureAD/microsoft-authentication-library-for-andr
 v.Next
 ----------
 - Expose expiresIn in MSAL Device Code flow callback #1169
+- Correct capitalization of client_capabilities claim 'xms_cc' (LLT) #1191
 
 Version 2.0.0
 ----------
