--- a/changelog
+++ b/changelog
@@ -3,6 +3,7 @@ MSAL Wiki : https://github.com/AzureAD/microsoft-authentication-library-for-andr
 v.Next
 ----------
 - Expose expiresIn in MSAL Device Code flow callback #1169
+- Fixed a bug where proguard rules would include too many symbols #1161
 
 Version 2.0.2
 ----------
