--- a/testapps/testapp/src/main/res/values/strings.xml
+++ b/testapps/testapp/src/main/res/values/strings.xml
@@ -61,4 +61,5 @@
     <string name="pop_default_resource_url">https://signedhttprequest.azurewebsites.net/api/validateSHR</string>
     <string name="claims">Claims</string>
     <string name="status">Status:</string>
+    <string name="pop_client_claims">PoP client claims</string>
 </resources>
