--- a/changelog
+++ b/changelog
@@ -1,6 +1,6 @@
 MSAL Wiki : https://github.com/AzureAD/microsoft-authentication-library-for-android/wiki
 
-v.Next
+Version 2.0.3
 ----------
 - Expose expiresIn in MSAL Device Code flow callback #1169
 - Fixed a bug where proguard rules would include too many symbols #1161
