--- a/changelog
+++ b/changelog
@@ -3,6 +3,10 @@ MSAL Wiki : https://github.com/AzureAD/microsoft-authentication-library-for-andr
 v.Next
 ----------
 
+Version 2.0.4
+----------
+- Fix syntax error in proguard rules, add usage of proguard to test app #1224
+
 Version 2.0.3
 ----------
 - Expose expiresIn in MSAL Device Code flow callback #1169
