--- a/changelog
+++ b/changelog
@@ -5,6 +5,11 @@ v.Next
 
 Version 2.0.4
 ----------
+- Fix exception casting issue in CommandDispatcher (common #1121)
+
+
+Version 2.0.4
+----------
 - Fix syntax error in proguard rules, add usage of proguard to test app #1224
 
 Version 2.0.3
