--- a/changelog
+++ b/changelog
@@ -2,6 +2,7 @@ MSAL Wiki : https://github.com/AzureAD/microsoft-authentication-library-for-andr
 
 v.Next
 ----------
+- Changes to Broker Validation to allow setting whether to trust debug brokers (prod brokers are always trusted).
 
 Version 2.0.5
 ----------
