--- a/changelog
+++ b/changelog
@@ -1,7 +1,7 @@
 MSAL Wiki : https://github.com/AzureAD/microsoft-authentication-library-for-android/wiki
 
 vNext
-- Changes to Broker Validation to allow setting whether to trust debug brokers (prod brokers are always trusted).
+- [MINOR] Changes to Broker Validation to allow setting whether to trust debug brokers (prod brokers are always trusted).
 
 Version 2.0.6
 ----------
