--- a/changelog
+++ b/changelog
@@ -1,6 +1,9 @@
 MSAL Wiki : https://github.com/AzureAD/microsoft-authentication-library-for-android/wiki
+V.Next
+----------
 
-vNext
+Version 2.0.7
+----------
 - [MINOR] Changes to Broker Validation to allow setting whether to trust debug brokers (prod brokers are always trusted).
 
 Version 2.0.6
