--- a/changelog
+++ b/changelog
@@ -2,7 +2,7 @@ MSAL Wiki : https://github.com/AzureAD/microsoft-authentication-library-for-andr
 
 vNext
 - [MINOR] Changes to Broker Validation to allow setting whether to trust debug brokers (prod brokers are always trusted) (#1274)
-- [PATCH] Better PublicClientApplicationConfiguration validation to fail when empty string is passed
+- [PATCH] Better PublicClientApplicationConfiguration validation to fail when empty string is passed (#1324)
 
 Version 2.0.6
 ----------
