--- a/changelog
+++ b/changelog
@@ -4,6 +4,7 @@ vNext
 - [PATCH] Add extra '/' in the example intent filter (#1323)
 - [MINOR] Changes to Broker Validation to allow setting whether to trust debug brokers (prod brokers are always trusted) (#1274)
 - [PATCH] Better PublicClientApplicationConfiguration validation to fail when empty string is passed (#1324)
+- [PATCH] Improve redirect_uri validation of PCA manifest (#1327)
 
 Version 2.0.6
 ----------
