--- a/changelog
+++ b/changelog
@@ -1,5 +1,6 @@
 MSAL Wiki : https://github.com/AzureAD/microsoft-authentication-library-for-android/wiki
-vNext
+Version 2.0.9
+----------
 - [PATCH] Add extra '/' in the example intent filter (#1323)
 - [PATCH] Better PublicClientApplicationConfiguration validation to fail when empty string is passed (#1324)
 - [PATCH] Improve redirect_uri validation of PCA manifest (#1327)
