--- a/changelog
+++ b/changelog
@@ -3,6 +3,7 @@ vNext
 - [PATCH] Add extra '/' in the example intent filter (#1323)
 - [PATCH] Better PublicClientApplicationConfiguration validation to fail when empty string is passed (#1324)
 - [PATCH] Improve redirect_uri validation of PCA manifest (#1327)
+- [NOTHING] No change
 
 Version 2.0.8
 ----------
