--- a/changelog
+++ b/changelog
@@ -4,6 +4,7 @@ Version 2.0.9
 - [PATCH] Add extra '/' in the example intent filter (#1323)
 - [PATCH] Better PublicClientApplicationConfiguration validation to fail when empty string is passed (#1324)
 - [PATCH] Improve redirect_uri validation of PCA manifest (#1327)
+- Picks up common@3.3.0
 
 Version 2.0.8
 ----------
