--- a/changelog
+++ b/changelog
@@ -1,3 +1,5 @@
+nothing
+
 MSAL Wiki : https://github.com/AzureAD/microsoft-authentication-library-for-android/wiki
 vNext
 - [PATCH] Add extra '/' in the example intent filter (#1323)
