--- a/changelog
+++ b/changelog
@@ -1,4 +1,8 @@
 MSAL Wiki : https://github.com/AzureAD/microsoft-authentication-library-for-android/wiki
+Version 2.0.12
+----------
+- Picks up common@3.4.3
+
 Version 2.0.10
 ----------
 - [PATCH] Add extra '/' in the example intent filter (#1323)
