updated the changelog

--- a/changelog
+++ b/changelog
@@ -6,6 +6,7 @@ vNext
 - [MINOR] Added support for handling null taskAffinity.  Add configuration to enable this new feature.  "handle_null_taskaffinity" which is a boolean (#1342)
 - [PATCH] Log and throw exception if there are other apps listening for the redirect URL scheme defined in Android Manifest (#1357)
 - [PATCH] Update Nimbus dependency version (#1382)
+- [MINOR] Added 2 new configuration settings: authorization_in_current_task (boolean, default:false), concurrent_authorization_requests (boolean, default: false)
 
 Version 2.0.12
 ----------
